# GDScript-formatter

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  tmp.gd
.github/workflows/: release.yml  test.yml
addons/GDQuest_GDScript_formatter/: plugin.gd
benchmarks/gdscript_files/: long.gd  short.gd
config/: languages.ncl
godot/addons/GDQuest_GDScript_formatter/: install_and_update.gd  menu.gd  plugin.gd
queries/: gdscript.scm
src/: formatter.rs  lib.rs  linter.rs  main.rs  reorder.rs
src/linter/: ignore_patterns.rs  lib.rs  regex_patterns.rs  rule_config.rs  rules.rs  tests.rs
src/linter/rules/: class_name.rs  comparison_with_itself.rs  constant_name.rs  duplicated_load.rs  enum_member_name.rs  enum_name.rs  signal_name.rs  (+10 more)
src/scripts/: benchmark.rs
tests/: integration_tests.rs
tests/code_order/: sample_ordered.gd  sample_unordered.gd
tests/expected/: array_long_strings.gd  await.gd  class_doc_comment.gd  class_inner.gd  class_name.gd  comments_basic.gd  comments_indentation.gd  comments_inline.gd  constructor.gd  consts.gd  dictionaries.gd  dictionary_long_strings.gd  enums.gd  extends.gd  extends_basic.gd  extends_leading_comment_no_spacing.gd  extends_leading_comment_spacing_var.gd  extends_one_var.gd  extends_string_path_var_too_much_spacing.gd  extends_two_vars_inner_class.gd  for_loop.gd  func_args_multiline.gd  func_constructor_args_multiline.gd  func_multiline_calls.gd  function_annotations.gd  function_parameters_type_inference.gd  function_single_line.gd  function_two_spaces.gd  function_variable_two_lines_spacing.gd  get_node.gd  inline_comments_after_colon.gd  lambda.gd  lambda_dangling_commas.gd  line_continuation.gd  match_case.gd  multiline.gd  one_blank_line_before_statements.gd  operators.gd  postprocess_in_strings.gd  regions.gd  (+14 more)
tests/input/: array_long_strings.gd  await.gd  binary_operators.gd  class_doc_comment.gd  class_inner.gd  comments.gd  comments_basic.gd  comments_indentation.gd  comments_inline.gd  constructor.gd  consts.gd  dictionaries.gd  dictionary_long_strings.gd  enums.gd  extends.gd  extends_leading_comment_spacing_var.gd  extends_string_path_var_no_spacing.gd  extends_string_path_var_too_much_spacing.gd  extends_two_vars_inner_class.gd  for_loop.gd  func_args_multiline.gd  func_constructor_args_multiline.gd  func_multiline_calls.gd  function_annotations.gd  function_return_types.gd  function_single_line.gd  function_two_spaces.gd  function_variable_two_lines_spacing.gd  inline_comments_after_colon.gd  lambda.gd  lambda_dangling_commas.gd  line_continuation.gd  match_case.gd  multiline.gd  one_blank_line_before_statements.gd  operators.gd  return.gd  semicolon.gd  setget.gd  signals.gd  (+11 more)
(+46 files in other folders)
