[package]
name = "gdscript-formatter"
version = "0.3.0"
edition = "2021"
description = "A GDScript code formatter using Topiary and Tree-sitter"
license = "MIT"
repository = "https://github.com/gdquest/gdscript-formatter"
default-run = "gdscript-formatter"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
topiary-core = "0.6"
tree-sitter-gdscript  = { git = "https://github.com/PrestonKnopp/tree-sitter-gdscript.git", rev = "e7393a9c4d5eb84bcea5d8a22723d4bf9bdd60e3" }
regex = "1.11"
tree-sitter = "0.25.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
test_each_file = "0.3.5"
similar = "2.7.0"

[features]
default = ["gdscript"]
gdscript = []

[[bin]]
name = "gdscript-formatter"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/scripts/benchmark.rs"

[profile.release]
strip = true
debug = false
opt-level = 3
lto = true
