[package]
name = "gdscript-formatter"
version = "0.9.1"
edition = "2024"
description = "A GDScript code formatter using Topiary and Tree-sitter"
license = "MIT"
repository = "https://github.com/gdquest/gdscript-formatter"
default-run = "gdscript-formatter"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
topiary-core = { git = "https://github.com/tweag/topiary", rev = "5081ccef9245fe56c2b3e2a7ced52277eda45825" }
tree-sitter-gdscript  = { git = "https://github.com/NathanLovato/tree-sitter-gdscript.git", branch = "gdquest/GDScript-formatter" }
regex = "1.11"
tree-sitter = "0.25.10"
rayon = "1.11.0"

[dev-dependencies]
test_each_file = "0.3.5"
similar = "2.7.0"

[features]
default = ["gdscript"]
gdscript = []

[[bin]]
name = "gdscript-formatter"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/scripts/benchmark.rs"

[profile.release]
strip = true
lto = true
